--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "eslint-plugin-prefer-object-spread": "^1.2.1"
   },
   "scripts": {
-    "build": "npm run lint && babel src --presets babel-preset-es2015 --out-dir dist",
+    "build": "npm run lint && babel src --out-dir dist",
     "lint": "eslint ./src",
     "prepublish": "npm run build",
     "test": "mocha --opts .mocharc"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chai": "^4.1.1",
-    "eslint": "^4.5.0",
-    "eslint-config-airbnb-base": "^11.3.2",
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-chai-expect": "^1.1.1",
-    "eslint-plugin-flowtype": "^2.35.0",
-    "eslint-plugin-import": "^2.7.0",
-    "flow-bin": "^0.53.1",
-    "mocha": "^3.5.0"
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-import": "^2.10.0",
+    "flow-bin": "^0.69.0",
+    "mocha": "^5.0.5"
   }
 }
