--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "raw",
   "version": "0.1.0",
-  "description": "Raw datastructures and algorithms in JS",
+  "description": "Datastructures in JS",
   "main": "./dist/index.js",
   "author": "Ilias Tsangaris",
   "license": "MIT",
   "dependencies": {
-    "eslint-plugin-prefer-object-spread": "^1.2.1"
+    "lodash": "^4.17.5"
   },
   "scripts": {
-    "build": "npm run lint && babel src --out-dir dist",
+    "build": "npm run verification && babel src --out-dir dist",
+    "flow": "flow",
     "lint": "eslint ./src",
     "prepublish": "npm run build",
-    "test": "mocha --opts .mocharc"
+    "test": "mocha --opts .mocharc",
+    "verification": "npm run lint && flow"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -28,7 +30,9 @@
     "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
     "flow-bin": "^0.69.0",
+    "flow-typed": "^2.4.0",
     "mocha": "^5.0.5"
   }
 }
