--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "npm run verification && babel src --out-dir dist",
     "flow": "flow",
+    "format": "prettier --write '**/*.js'",
     "lint": "eslint ./src",
     "prepublish": "npm run build",
     "test": "mocha --opts .mocharc",
@@ -27,12 +28,16 @@
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "flow-bin": "^0.69.0",
     "flow-typed": "^2.4.0",
-    "mocha": "^5.0.5"
+    "mocha": "^5.0.5",
+    "prettier": "^1.11.1",
+    "prettier-eslint": "^8.8.1"
   }
 }
