--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lodash": "^4.17.5"
   },
   "scripts": {
-    "build": "npm run verification && babel src --out-dir dist",
-    "flow": "flow",
+    "build": "npm run verification && esdoc && babel src --out-dir dist",
     "format": "prettier --write '**/*.js'",
     "lint": "eslint ./src",
     "prepublish": "npm run build",
     "test": "mocha --opts .mocharc",
+    "test:watch": "npm run test -- --watch",
     "verification": "npm run lint && flow"
   },
   "devDependencies": {
@@ -26,6 +26,8 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
+    "esdoc": "^1.0.4",
+    "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
