--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "esdoc": "^1.0.4",
+    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
+    "esdoc-flow-type-plugin": "^1.0.1",
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
