--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
   "presets": ["es2015", "stage-0", "flow"],
-  "plugins": ["transform-class-properties"]
+  "plugins": ["transform-class-properties"],
+  "env": {
+    "test": {
+      "plugins": [ "istanbul" ]
+    }
+  }
 }
