--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,5 +25,5 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests!
-      - run: yarn verification
+      # Verify build and generate new docs
+      - run: yarn verification && yarn esdoc
