--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lodash": "^4.17.5"
   },
   "scripts": {
-    "build": "npm run verification && esdoc && babel src --out-dir dist",
+    "build": "npm run verification && babel src --out-dir dist",
     "format": "prettier --write '**/*.js'",
     "lint": "eslint ./src",
     "prepublish": "npm run build",
-    "test": "mocha --opts .mocharc",
+    "test": "nyc mocha --opts .mocharc",
     "test:watch": "npm run test -- --watch",
-    "verification": "npm run lint && npm run test && flow"
+    "verification": "npm run lint && npm run test && flow && esdoc"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.2",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
@@ -41,6 +42,7 @@
     "flow-bin": "^0.69.0",
     "flow-typed": "^2.4.0",
     "mocha": "^5.0.5",
+    "nyc": "^11.6.0",
     "prettier": "^1.11.1",
     "prettier-eslint": "^8.8.1"
   }
